Complete lab8